@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.filmweb.pl"
         name="Filmweb"
-        version="2.3.5"
+        version="2.3.6"
         provider-name="Regss">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
